modif img-loaded-container

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -67,7 +67,7 @@
 							<a>jpg, png : 4mo max</a>
 						</div>
 						<div class="img-loaded-container">
-							<img src="" alt="zefvzefée" class="img-loaded">
+							<img src="placeholder.jpg" alt="" class="img-loaded">
 						</div>
 					</form>
 					<section class="champ-saisie">
