--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -37,7 +37,6 @@
 					</div>
 					<div id="gallery-modal" class="modal1-gallery"></div>
 					<hr class="modal-line">
-					<!-- Ligne de séparation -->
 					<form id="add-project-form-modal">
 						<input type="submit" value="Ajouter une photo" id="add-photo-button">
 					</form>
@@ -48,7 +47,6 @@
 			<section class="modal-container2" id="modal2" style="display: none;">
 				<div class="modal-content">
 					<div class="modal2-header">
-						<!-- Bouton Retour  -->
 						<svg id="back-to-modal1" class="modal2-back-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.2 288 416 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0L214.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z"/></svg>
 						<button class="modal2-close close">&times;</button>
 						<div id="modal2-title" class="modal2-title"><h2>Ajout photo</h2></div>
@@ -61,13 +59,12 @@
 									<path d="M63.5517 15.8879C64.7228 15.8879 65.681 16.8461 65.681 18.0172V60.5768L65.0156 59.7118L46.9165 36.2894C46.3176 35.5042 45.3727 35.0517 44.3879 35.0517C43.4031 35.0517 42.4715 35.5042 41.8594 36.2894L30.8136 50.5824L26.7546 44.8998C26.1557 44.0614 25.1975 43.569 24.1595 43.569C23.1214 43.569 22.1632 44.0614 21.5644 44.9131L10.9178 59.8183L10.319 60.6434V60.6034V18.0172C10.319 16.8461 11.2772 15.8879 12.4483 15.8879H63.5517ZM12.4483 9.5C7.75048 9.5 3.93103 13.3195 3.93103 18.0172V60.6034C3.93103 65.3012 7.75048 69.1207 12.4483 69.1207H63.5517C68.2495 69.1207 72.069 65.3012 72.069 60.6034V18.0172C72.069 13.3195 68.2495 9.5 63.5517 9.5H12.4483ZM23.0948 35.0517C23.9337 35.0517 24.7644 34.8865 25.5394 34.5655C26.3144 34.2444 27.0186 33.7739 27.6118 33.1807C28.2049 32.5876 28.6755 31.8834 28.9965 31.1083C29.3175 30.3333 29.4828 29.5027 29.4828 28.6638C29.4828 27.8249 29.3175 26.9943 28.9965 26.2192C28.6755 25.4442 28.2049 24.74 27.6118 24.1468C27.0186 23.5537 26.3144 23.0831 25.5394 22.7621C24.7644 22.4411 23.9337 22.2759 23.0948 22.2759C22.2559 22.2759 21.4253 22.4411 20.6503 22.7621C19.8752 23.0831 19.171 23.5537 18.5779 24.1468C17.9847 24.74 17.5142 25.4442 17.1931 26.2192C16.8721 26.9943 16.7069 27.8249 16.7069 28.6638C16.7069 29.5027 16.8721 30.3333 17.1931 31.1083C17.5142 31.8834 17.9847 32.5876 18.5779 33.1807C19.171 33.7739 19.8752 34.2444 20.6503 34.5655C21.4253 34.8865 22.2559 35.0517 23.0948 35.0517Z" fill="#B9C5CC"/>
 								</svg>
 							</div>
-							<!-- L'input de type file -->
-							<input type="file" id="file-input" name="file" accept=".jpg, .png" style="display: none;" >
+							<input type="file" id="file-input" name="file" accept=".jpg, .png">
 							<button id="modal2-photo-add-button">+ Ajouter photo</button>
 							<a>jpg, png : 4mo max</a>
 						</div>
 						<div class="img-loaded-container">
-							<img src="placeholder.jpg" alt="" class="img-loaded">
+							<img src="./assets/images/sophie-bluel.png" alt="" class="img-loaded">
 						</div>
 					</form>
 					<section class="champ-saisie">
@@ -85,10 +82,8 @@
 						</div>
 					</section>
 						<hr class="modal2-line">
-						<!-- Ligne de séparation -->
 						<button id="modal2-button">Valider</button> 
 					<div id="success-message" style="display: none;"></div>
-					<!-- Div pour afficher les messages de succès -->
 				</div>
 			</section>
 			<section id="introduction">
@@ -110,7 +105,6 @@
 			</section>
 			<section id="portfolio">
 				<h2>Mes Projets</h2>
-				<!-- Bouton pour ouvrir la fenêtre modale -->
 				<button id="open-modal-button" class="open-modal">
 					<i class="fa-regular fa-pen-to-square"></i>
 					<span>Modifier</span>
@@ -145,7 +139,6 @@
 				</ul>
 			</nav>
 		</footer>
-		<!--Modals overlay-->
 		<div class="modal-overlay" id="overlay"></div>
 	</body>
 </html>
