ajout display: none #success-message

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -83,7 +83,7 @@
 					</section>
 						<hr class="modal2-line">
 						<button id="modal2-button">Valider</button> 
-					<div id="success-message" style="display: none;"></div>
+					<div id="success-message" ></div>
 				</div>
 			</section>
 			<section id="introduction">
